--- a/Taylr/Base.lproj/LaunchScreen.xib
+++ b/Taylr/Base.lproj/LaunchScreen.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F6a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -10,21 +10,22 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="sNn-8r-TMJ">
-                    <rect key="frame" x="37" y="154" width="300" height="176"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="sNn-8r-TMJ">
+                    <rect key="frame" x="86" y="100" width="204" height="113"/>
                 </imageView>
             </subviews>
-            <color key="backgroundColor" red="0.61960784310000006" green="0.4941176471" blue="0.66274509800000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.29019607843137252" green="0.078431372549019607" blue="0.5490196078431373" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="centerY" secondItem="sNn-8r-TMJ" secondAttribute="centerY" constant="91.5" id="6WY-0a-X37"/>
-                <constraint firstAttribute="centerX" secondItem="sNn-8r-TMJ" secondAttribute="centerX" constant="0.5" id="Sqv-cz-63Z"/>
+                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="sNn-8r-TMJ" secondAttribute="bottom" constant="300" id="HQp-vL-y8e"/>
+                <constraint firstAttribute="centerX" secondItem="sNn-8r-TMJ" secondAttribute="centerX" id="Sqv-cz-63Z"/>
+                <constraint firstItem="sNn-8r-TMJ" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" priority="749" constant="100" id="grI-ka-SdO"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
-            <point key="canvasLocation" x="-35" y="-26"/>
+            <point key="canvasLocation" x="15" y="-35"/>
         </view>
     </objects>
     <resources>
-        <image name="Logo" width="300" height="176"/>
+        <image name="logo" width="204" height="113"/>
     </resources>
 </document>
